# engsoft-tp3

./: .gitignore  README.md  example.json  main.py  pyproject.toml
.github/workflows/: tests.yml
modules/: api.py  ttprocess.py
tests/: test_integration.py  test_urls.py  test_utils.py
